# MBU_DLP_GoogleWorkspace_Notify_Users

./: .pylintrc  README.md  pyproject.toml
robot_framework/: process.py
