[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MBU_DLP_GoogleWorkspace_Notify_Users"
version = "0.0.3"
authors = [
  { name="MBU", email="rpa@mbu.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 1.*",
    "Pillow == 9.5.0",
    "itk-dev-shared-components == 2.2.*",
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]